[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
networkx = "^2.5"
flask = "^1.1.2"
flask-cors = "^3.0.8"
replit = "^2.0.0"
aiohttp = "^3.6.2"
Flask-Caching = "^1.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
